--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <!-- Splash -->
         <activity
             android:name=".activities.SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +34,7 @@
         <!-- OutsideWeb -->
         <activity
             android:name=".activities.OutsideWebActivity"
-            android:theme="@style/OutsideWebTheme" />
+            android:theme="@style/AppTheme.OutsideWeb" />
 
         <!-- MessagingService -->
         <service android:name=".services.TeknogiaMessagingService">
