Upgrade the project to API level 26

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <!-- Contact Us -->
         <activity
             android:name=".activities.ContactUsActivity"
-            android:label="Wasiliana Nasi" />
+            android:label="Kutana Na Clique" />
         <!-- OutsideWeb -->
         <activity
             android:name=".activities.OutsideWebActivity"
